[img] .JPG capitalized

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <table WIDTH="100%" border=0>
 
 <tr><td>
-<IMG SRC="images/smaniato.jpg"></IMG> 
+<IMG SRC="images/smaniato.JPG"></IMG> 
 
 </td> <td>
 <!--<center>
