Updated page: blog, interests, no PHDcomics/clock anymore.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ writeContent(true);
 <Br>
 Sibley School of Mechanical and Aerospace Engineering - Cornell University
 <br><bR> 
-<b>Research Interests:</b> Formal Methods in Robotics, Controller Synthesis, Hybrid Systems
+<b>Research Interests:</b> Formal Methods in Robotics, Reactive Planning, Provably-correct Control, Planning in Open Domains
 <br><BR> 
 <b>Advisor:</b> Prof. Hadas Kress-Gazit
 <br><bR> 
@@ -62,7 +62,9 @@ Sibley School of Mechanical and Aerospace Engineering - Cornell University
 <bR><BR> 
 <b>Email:</b> smaniato@outlook.com
 <br><bR> 
-<b>Websites:</b> <a href="http://smaniato.github.io/">smaniato.github.io</a> | <a href="https://github.com/smaniato" target="_blank">@ Github</a> | <a href="https://www.researchgate.net/profile/Spyros_Maniatopoulos" target="_blank">@ ResearchGate</a> | <a href="http://scholar.google.com/citations?user=ao8r3Q4AAAAJ&hl=en" target="_blank">@ Scholar</a> | <a href="http://cornell.academia.edu/smaniato/About" target="_blank">@ Academia.edu</a> | <a href="http://www.linkedin.com/in/smaniato" target="_blank">@ LinkedIn</a> | <a href="https://plus.google.com/u/0/104740749884869629624/" target="_blank">@ Google+</a> | <a href="http://www.facebook.com/smaniato" target="_blank">@ Facebook</a> | <a href="http://twitter.com/#!/spmaniato" target="_blank">@ Twitter</a>
+<b>My Blog:</b> <a href="http://www.smaniato.me/">www.smaniato.me</a>
+<br><bR> 	
+<b>Social Media:</b> <a href="https://github.com/smaniato" target="_blank">@ Github</a> | <a href="https://www.researchgate.net/profile/Spyros_Maniatopoulos" target="_blank">@ ResearchGate</a> | <a href="http://scholar.google.com/citations?user=ao8r3Q4AAAAJ&hl=en" target="_blank">@ Scholar</a> | <a href="http://cornell.academia.edu/smaniato/About" target="_blank">@ Academia.edu</a> | <a href="http://www.linkedin.com/in/smaniato" target="_blank">@ LinkedIn</a> | <a href="https://plus.google.com/u/0/104740749884869629624/" target="_blank">@ Google+</a> | <a href="http://www.facebook.com/smaniato" target="_blank">@ Facebook</a> | <a href="http://twitter.com/#!/spmaniato" target="_blank">@ Twitter</a>
 <br><bR>
 <b>Education:</b><bR>
 (2012 - 2017) PhD in Mechanical Engineering (Minor in Computer Science), Cornell University<bR>
@@ -92,13 +94,5 @@ Sibley School of Mechanical and Aerospace Engineering - Cornell University
 </div> 
  
 <div style="clear: both;"> </div> 
- 
-</div> 
-</br>
-<center>
-<script language="JavaScript" src="http://www.phdcomics.com/previewfeed_horiz.php"> </script>
-<p> &nbsp; </p>
-<iframe src="http://free.timeanddate.com/clock/i3vtvvwx/n179/fn6/fc0f0/tc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th1/ts1/ta1/tb4" frameborder="0" width="192" height="54"></iframe>
-</center>
 </body> 
 </html>
