More updates: Education first.

--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@ writeContent(true);
 </td></tr>
 </table>
 <br>
-<b>Position:</b> Research Assistant - Verifiable Robotics Research Group
-<Br>
-Sibley School of Mechanical and Aerospace Engineering - Cornell University
-<br><bR> 
-<b>Research Interests:</b> Formal Methods in Robotics, Reactive Planning, Provably-correct Control, Planning in Open Domains
-<br><BR> 
-<b>Advisor:</b> Prof. Hadas Kress-Gazit
-<br><bR> 
-<b>Office:</b> 127 Upson Hall, Cornell University, Ithaca, NY 14853, USA
-<bR><BR> 
-<b>Email:</b> smaniato@outlook.com
-<br><bR> 
-<b>My Blog:</b> <a href="http://www.smaniato.me/">www.smaniato.me</a>
-<br><bR> 	
-<b>Social Media:</b> <a href="https://github.com/smaniato" target="_blank">@ Github</a> | <a href="https://www.researchgate.net/profile/Spyros_Maniatopoulos" target="_blank">@ ResearchGate</a> | <a href="http://scholar.google.com/citations?user=ao8r3Q4AAAAJ&hl=en" target="_blank">@ Scholar</a> | <a href="http://cornell.academia.edu/smaniato/About" target="_blank">@ Academia.edu</a> | <a href="http://www.linkedin.com/in/smaniato" target="_blank">@ LinkedIn</a> | <a href="https://plus.google.com/u/0/104740749884869629624/" target="_blank">@ Google+</a> | <a href="http://www.facebook.com/smaniato" target="_blank">@ Facebook</a> | <a href="http://twitter.com/#!/spmaniato" target="_blank">@ Twitter</a>
-<br><bR>
 <b>Education:</b><bR>
 (2012 - 2017) PhD in Mechanical Engineering (Minor in Computer Science), Cornell University<bR>
 (2005 - 2011) Diploma in Mechanical Engineering, National Technical University of Athens<bR>
+<br>
+<b>Position:</b> Research Assistant - Verifiable Robotics Research Group - Autonomous Systems Lab
+<BR> 
+Sibley School of Mechanical and Aerospace Engineering - Cornell University<br>
+<bR> 
+<b>Research Interests:</b> Formal Methods in Robotics, Reactive Planning, Provably-correct Control, Planning in Open Domains<br>
+<BR> 
+<b>Advisor:</b> Prof. Hadas Kress-Gazit<br>
+<bR> 
+<b>Office:</b> 127 Upson Hall, Cornell University, Ithaca, NY 14853, USA<bR>
+<BR> 
+<b>Email:</b> smaniato@outlook.com<br>
+<bR> 
+<b>My Blog:</b> <a href="http://www.smaniato.me/">www.smaniato.me</a><br>
+<bR> 	
+<b>Social Media:</b> <a href="https://github.com/smaniato" target="_blank">@ Github</a> | <a href="https://www.researchgate.net/profile/Spyros_Maniatopoulos" target="_blank">@ ResearchGate</a> | <a href="http://scholar.google.com/citations?user=ao8r3Q4AAAAJ&hl=en" target="_blank">@ Scholar</a> | <a href="http://cornell.academia.edu/smaniato/About" target="_blank">@ Academia.edu</a> | <a href="http://www.linkedin.com/in/smaniato" target="_blank">@ LinkedIn</a> | <a href="https://plus.google.com/u/0/104740749884869629624/" target="_blank">@ Google+</a> | <a href="http://www.facebook.com/smaniato" target="_blank">@ Facebook</a> | <a href="http://twitter.com/#!/spmaniato" target="_blank">@ Twitter</a>
 
 </div> 
 <div id="bottom"> 
@@ -84,7 +84,7 @@ Sibley School of Mechanical and Aerospace Engineering - Cornell University
 </ul>
 </div> 
 <div class="column"> 
-<h2>Last Update: September 2013</h2>  
+<h2>Last Update: November 2013</h2>  
 <ul>
 [2] Dimitra Panagou, Spyros Maniatopoulos, and Kostas J. Kyriakopoulos, "Control of an Underactuated Underwater Vehicle in 3D Space under Field-of-View Constraints", <i>IFAC Workshop on Navigation, Guidance and Control of Underwater Vehicles</i>, Porto, Portugal, April 2012 [<a href="http://www.ifac-papersonline.net/Detailed/57377.html" target="_blank">PDF</a>].
 </ul>
