--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 </head> 
 <body> 
  
+<!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-529532423e0564fb"></script>
+<script type="text/javascript">
+  addthis.layers({
+    'theme' : 'transparent', 
+    'follow' : {
+      'services' : [
+        {'service': 'facebook', 'id': 'smaniato'},
+        {'service': 'twitter', 'id': 'spmaniato'},
+        {'service': 'linkedin', 'id': 'smaniato'},
+        {'service': 'google_follow', 'id': '+SpyrosManiatopoulos'}
+      ]
+    }   
+  });
+</script>
+<!-- AddThis Smart Layers END -->
+ 
 <div id="wrap"> 
  
 <div id="header"> 
