ICRA 2014 to appear

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Sibley School of Mechanical and Aerospace Engineering - Cornell University<br>
 [2] Dimitra Panagou, Spyros Maniatopoulos, and Kostas J. Kyriakopoulos, "Control of an Underactuated Underwater Vehicle in 3D Space under Field-of-View Constraints", <i>IFAC Workshop on Navigation, Guidance and Control of Underwater Vehicles</i>, Porto, Portugal, April 2012 [<a href="http://www.ifac-papersonline.net/Detailed/57377.html" target="_blank">PDF</a>].
 </ul>
 <ul>
-[4] Spyros Maniatopoulos, Matthew Blair, Cameron Finucane and Hadas Kress-Gazit, "Open-World Mission Specification for Reactive Robots", <i>International Conference on Robotics and Automation (ICRA)</i> Hong Kong, China, May-June 2014 (submitted).
+[4] Spyros Maniatopoulos, Matthew Blair, Cameron Finucane and Hadas Kress-Gazit, "Open-World Mission Specification for Reactive Robots", <i>International Conference on Robotics and Automation (ICRA)</i> Hong Kong, China, May-June 2014 (to appear).
 </ul>
 </div> 
  
