Backed up page and wrote new landing apges that redirects to my blog.

--- a/index.html
+++ b/index.html
@@ -1,116 +1,15 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-<title>Spyros Maniatopoulos</title> 
-<meta http-equiv="Content-Language" content="English" /> 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-<META NAME="keywords" content="spyros maniatopoulos, maniatopoulos, spyros, μανιατόπουλος, σπύρος, μανιατοπουλος, σπυρος, σπυροσ, μηχανολογος, εμπ, ntua">
-<meta name="description" content="Spyros Maniatopoulos - Σπύρος Μανιατόπουλος - Personal Webpage" />
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" /> 
-
-</head> 
-<body> 
- 
-<!-- AddThis Smart Layers BEGIN -->
-<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-529532423e0564fb"></script>
-<script type="text/javascript">
-  addthis.layers({
-    'theme' : 'transparent', 
-    'follow' : {
-      'services' : [
-        {'service': 'facebook', 'id': 'smaniato'},
-        {'service': 'twitter', 'id': 'spmaniato'},
-        {'service': 'linkedin', 'id': 'smaniato'},
-        {'service': 'google_follow', 'id': '+SpyrosManiatopoulos'}
-      ]
-    }   
-  });
-</script>
-<!-- AddThis Smart Layers END -->
- 
-<div id="wrap"> 
- 
-<div id="header"> 
-<h1><a href="#">Spyros Maniatopoulos</a></h1> 
-</div> 
- 
-<div id="menu"> 
-<ul> 
-<li><a href="#">Home</a></li>
-<li><a href="documents/resume.pdf" target="_blank">My Résumé</span></a></li>
-<li><a href="http://verifiablerobotics.com/" target="_blank">Prof. Hadas Kress-Gazit</a></li>
-<li><a href="http://cornell-asl.org/wiki/index.php?title=Main_Page" target="_blank">Autonomous Systems Lab</a></li> 
-<li><a href="http://www.cornell.edu/" target="_blank">Cornell University</a></li> 
-</ul> 
-</div> 
- 
-<div id="left"> 
-<table WIDTH="100%" border=0>
-
-<tr><td>
-<IMG SRC="images/smaniato.jpeg"></IMG> 
-
-</td> <td>
-<!--<center>
-<div id="myContent">
-</div><br>
-<div id="contentToWrite" style="display:none">
-Hello!!! My name is Spyros.
-<br><br>
-Welcome to my webpage :-)
-</div>
-</center>
-<script type="text/javascript">
-writeContent(true);
-</script>-->
-</td></tr>
-</table>
-<br>
-<b>Education:</b><bR>
-(2012 - 2017) PhD in Mechanical Engineering (Minor in Computer Science), Cornell University<bR>
-(2005 - 2011) Diploma in Mechanical Engineering, National Technical University of Athens<bR>
-<br>
-<b>Position:</b> Research Assistant - Verifiable Robotics Research Group - Autonomous Systems Lab
-<BR> 
-Sibley School of Mechanical and Aerospace Engineering - Cornell University<br>
-<bR> 
-<b>Research Interests:</b> Formal Methods in Robotics, Reactive Planning, Provably-correct Control, Planning in Open Domains<br>
-<BR> 
-<b>Advisor:</b> Prof. Hadas Kress-Gazit<br>
-<bR> 
-<b>Office:</b> 127 Upson Hall, Cornell University, Ithaca, NY 14853, USA<bR>
-<BR> 
-<b>Email:</b> smaniato@outlook.com<br>
-<bR> 
-<b>My Blog:</b> <a href="http://www.smaniato.me/">www.smaniato.me</a><br>
-<bR> 	
-<b>Social Media:</b> <a href="https://github.com/smaniato" target="_blank">@ Github</a> | <a href="https://www.researchgate.net/profile/Spyros_Maniatopoulos" target="_blank">@ ResearchGate</a> | <a href="http://scholar.google.com/citations?user=ao8r3Q4AAAAJ&hl=en" target="_blank">@ Scholar</a> | <a href="http://cornell.academia.edu/smaniato/About" target="_blank">@ Academia.edu</a> | <a href="http://www.linkedin.com/in/smaniato" target="_blank">@ LinkedIn</a> | <a href="https://plus.google.com/u/0/104740749884869629624/" target="_blank">@ Google+</a> | <a href="http://www.facebook.com/smaniato" target="_blank">@ Facebook</a> | <a href="http://twitter.com/#!/spmaniato" target="_blank">@ Twitter</a>
-
-</div> 
-<div id="bottom"> 
-<div class="column"> 
-<h2>Peer-reviewed Papers</h2> 
-<ul>
-[1] Spyros Maniatopoulos, Dimos V. Dimarogonas, and Kostas J. Kyriakopoulos, "A Decentralized Event-based Predictive Navigation Scheme for Air-Traffic Control", <i>The 2012 American Control Conference</i> (ACC), Montréal, Canada, June 2012 [<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?tp=&arnumber=6315079" target="_blank">PDF</a>].
-</ul> 
-<ul>
-[3] Spyros Maniatopoulos, Dimitra Panagou, and Kostas J. Kyriakopoulos, "A Model Predictive Control Scheme for the Navigation of a Nonholonomic Robot with Field-of-View Constraints ", <i>The 2013 American Control Conference</i> (ACC), Washington, DC, USA, June 2013 [<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?tp=&arnumber=6580446" target="_blank">PDF</a>].
-</ul>
-<ul>
-</ul>
-</div> 
-<div class="column"> 
-<h2>Last Update: November 2013</h2>  
-<ul>
-[2] Dimitra Panagou, Spyros Maniatopoulos, and Kostas J. Kyriakopoulos, "Control of an Underactuated Underwater Vehicle in 3D Space under Field-of-View Constraints", <i>IFAC Workshop on Navigation, Guidance and Control of Underwater Vehicles</i>, Porto, Portugal, April 2012 [<a href="http://www.ifac-papersonline.net/Detailed/57377.html" target="_blank">PDF</a>].
-</ul>
-<ul>
-[4] Spyros Maniatopoulos, Matthew Blair, Cameron Finucane and Hadas Kress-Gazit, "Open-World Mission Specification for Reactive Robots", <i>International Conference on Robotics and Automation (ICRA)</i> Hong Kong, China, May-June 2014 (to appear).
-</ul>
-</div> 
- 
-<div style="clear: both;"> </div> 
-</body> 
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=http://www.smaniato.me/">
+        <script type="text/javascript">
+            window.location.href = "http://www.smaniato.me/"
+        </script>
+        <title>Spyros Maniatopoulos</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://www.smaniato.me/'>link to my page.</a>
+    </body>
 </html>
