--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://www.smaniato.me/">
+        <meta http-equiv="refresh" content="1;url=http://spmaniato.weebly.com/">
         <script type="text/javascript">
-            window.location.href = "http://www.smaniato.me/"
+            window.location.href = "http://spmaniato.weebly.com/"
         </script>
         <title>Spyros Maniatopoulos</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://www.smaniato.me/'>link to my page.</a>
+        If you are not redirected automatically, follow the <a href='http://spmaniato.weebly.com/'>link to my page.</a>
     </body>
 </html>
